Abstracting revit api calls

--- a/RevitAddin/RevitAddin.csproj
+++ b/RevitAddin/RevitAddin.csproj
@@ -84,7 +84,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\ValveGetterIcon_32x32.png" />
+    <EmbeddedResource Include="Resources\valveGetterFormIcon96.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\valveGetterIcon96.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
