--- a/src/ValveGetter/ValveGetter.Core/ValveGetter.Core.csproj
+++ b/src/ValveGetter/ValveGetter.Core/ValveGetter.Core.csproj
@@ -3,6 +3,7 @@
     <PackageReference Include="KdTree" Version="1.4.1" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\RevitAPIWrapper\RevitAPIWrapper\RevitAPIWrapper.csproj" />
     <ProjectReference Include="..\ValveGetter.Settings\ValveGetter.Settings.csproj" />
   </ItemGroup>
 </Project>
