--- a/RevitAPIWrapper/RevitAPIWrapper/RevitAPIWrapper.csproj
+++ b/RevitAPIWrapper/RevitAPIWrapper/RevitAPIWrapper.csproj
@@ -1,7 +1,1 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
-	<ItemGroup>
-	  <ProjectReference Include="..\IRevitAPIWrapper\IRevitAPIWrapper.csproj" />
-	</ItemGroup>
-
-</Project>
+﻿<Project Sdk="Microsoft.NET.Sdk" />
