--- a/src/ValveGetter/ValveGetter.UI/ValveGetter.UI.csproj
+++ b/src/ValveGetter/ValveGetter.UI/ValveGetter.UI.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\RevitAPIWrapper\Extensions\Extensions.csproj" />
     <ProjectReference Include="..\ValveGetter.Settings\ValveGetter.Settings.csproj" />
   </ItemGroup>
 
